# SLM-RL

./: .dockerignore  .gitignore  CODING_GUIDELINE.md  DESIGN.md  Dockerfile  Makefile  README.md  TODO.md  colab_onboard.ipynb  colab_workshop.ipynb  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
configs/: default.yaml  hardware.yaml
configs/games/: atari_freeway.yaml  blackjack.yaml  boxing.yaml  connect4.yaml  demon-attack.yaml  dominion.yaml  freeway.yaml  mastermind-easy.yaml  mastermind.yaml  space-invaders.yaml
configs/training/: grpo_default.yaml  sft_warmstart.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  HYBRID_RL.md  LIFECYCLE.md  PIPELINE.md  PLUGIN_GUIDE.md  ROADMAP.md  TRAINING_DATASET.md
examples/: atari_simple.py  mastermind_play.py
plans/: 001-sft-as-initialization.md  002-reasoning-teacher-and-prompts.md  003-credit-assignment-and-epochs.md  004-cross-generation-replay.md  005-batched-episode-collection.md  006-mastermind-easy-curriculum.md  007-live-play-webui.md  008-space-invaders-gymnasium.md  009-space-invaders-teacher.md  010-live-game-screen.md  012-dqn-teacher.md  013-workshop-playground.md  README.md
scripts/: bake_sft_pack.py  bake_split_sft_eval.py  smoke_rollout.sh
slm_rl/: __init__.py  cli.py  hf_auth.py  packs.py
slm_rl/agents/: __init__.py  base.py  bots.py  llm_agent.py  vl_agent.py
slm_rl/bridges/: gym_adapter.py  openenv_bridge.py
slm_rl/config/: __init__.py  loader.py  schema.py
slm_rl/dashboard/: app.py
slm_rl/datagen/: __init__.py  consolidate.py  grpo_export.py  hf_publish.py  hf_push.py  schema.py  sft_export.py  writer.py
slm_rl/eval/: __init__.py  elo.py  gate.py  metrics.py  suites.py
slm_rl/games/: __init__.py  base.py  registry.py  reward_hook.py
slm_rl/games/atari/: __init__.py  boxing.py  demon_attack.py  freeway.py  space_invaders.py
slm_rl/games/atari/ram_maps/: __init__.py  boxing.py  demon_attack.py  freeway.py  space_invaders.py
slm_rl/games/blackjack/: __init__.py
slm_rl/games/connect4/: __init__.py
slm_rl/games/dominion/: __init__.py
slm_rl/games/mastermind/: __init__.py  env.py
slm_rl/inference/: __init__.py  base.py  llama_cpp_be.py  mlx_be.py  transformers_be.py  transformers_vl_be.py  vllm_be.py
slm_rl/orchestrator/: __init__.py  generation.py  paths.py  registry.py
slm_rl/platform/: __init__.py  hardware.py  launch.py
slm_rl/playground/: __init__.py  dqn_monitor.py  evolve_monitor.py  experiments.py  gens_page.py  knobs.py  page.py  presets.py  profile.py  reward_template.py  server.py  stats.py  tutorial_content.py
slm_rl/rollout/: __init__.py  batch_runner.py  monitor.py  opponent_pool.py  runner.py
slm_rl/teachers/: __init__.py  boxing.py  demon_attack.py  dqn.py  dqn_checkpoint.py  freeway.py  mastermind_solver.py  pruner.py  space_invaders_heuristic.py
slm_rl/theater/: __init__.py  exhibition.py
slm_rl/training/: __init__.py  base.py  grpo.py  hygiene.py  lora.py  reject_sft.py
slm_rl/webui/: __init__.py  page.py  png.py  replay.py  server.py  tailer.py
tests/: test_batch_runner.py  test_boxing.py  test_config.py  test_curriculum.py  test_demon_attack.py  test_dqn_checkpoint.py  test_dqn_monitor.py  test_dqn_teacher.py  test_eval_limit.py  test_evolve_monitor.py  test_freeway.py  test_freeway_teacher.py  test_generation.py  test_generic_dqn_teacher.py  test_grpo_budget.py  test_grpo_export.py  test_grpo_rewards.py  test_hardware.py  test_hf_auth.py  test_hf_publish.py  test_hf_push.py  test_lora_mps_load.py  test_mastermind.py  test_mlx_backend.py  test_monitor_runner.py  test_orchestrator.py  test_packs.py  test_parser.py  test_playground.py  test_playground_model_picker.py  test_playground_play_again.py  test_playground_presets.py  test_playground_profile.py  test_playground_theater.py  test_playground_tutorial.py  test_playground_watch.py  test_profile.py  test_pruner.py  test_registry.py  test_reward_hook.py  (+14 more)
web/: Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  vite.config.ts
web/src/api/: client.ts  dqn.ts  evolve.ts  profile.ts  projects.ts  watch.ts
web/src/components/projects/: ProjectConfigAside.vue  PublishModal.vue
web/src/components/shell/: AppShell.vue
web/src/components/ui/: LivePill.vue  UiButton.vue  UiCard.vue  UiField.vue  UiModal.vue
web/src/components/watch/: EpisodeCard.vue  EvolvePanel.vue  LiveWatchPanel.vue  RunPanel.vue  ScreenPanel.vue  TheaterComparePanel.vue
web/src/composables/: useEventSource.ts  useFrameStream.ts  useProfile.ts  useWatchStream.ts
web/src/lib/: workshopHf.ts
web/src/router/: index.ts
web/src/styles/: base.css  tokens.css
web/src/views/: EvolveView.vue  ProjectView.vue  ProjectsView.vue  TeachersView.vue  WelcomeView.vue
